--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,22 @@
       content="Used as a boilerplate for tasks in the 'HTML, CSS and SASS' course in boom.dev"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="scss/app.css">
   </head>
   <body>
-    <div class="main">
-      <div class="emoji mb-6">💣🤯💥</div>
-      <button class="button">Boom?</button>
+    <div class="navbar-menu">
+      <a href="#" ><i class="menu"></i>Home</a>
+      <a href="#"><i class="menu">Page 1</i></a>
+      <a href="#"><i class="menu">Page 2</i></a>
+      <a href="#"><i class="menu"></i>Page 3</a>
+      <a href="#"><i class="menu"></i>Page 3</a>
+    </div>
+    <div class="navbar-burger">
+      <a href="#"><i class="fa fa-home">Burger 1</i></a>
+      <a href="#"><i class="fa fa-search">Burger 2</i></a>
+      <a href="#"><i class="fa fa-envelope">Burger 3</i></a>
+      <a href="#"><i class="fa fa-globe"></i>Burger 4</a>
+      <a href="#"><i class="fa fa-trash"></i>Burger 5</a>
     </div>
   </body>
 </html>
